<resources>
    <string name="app_name">SweetlandApp</string>
    <string name="app"> سوئیت لند</string>

    <string name="main_activity_text">
        کدوم
       <font color="#D06119">شیرینی</font>
        می خوای
        \n
        برای امروز بپزی؟
    </string>
    <string name="mainactivity_search_hint"> رفتن به صفحه ی جستجو</string>
    <string name="search_search_hint">جستجو</string>
    <string name="mainactivity_list_sweets">لیست شیرینی ها</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_me">درباره ما</string>
    <string name="material">برای پختن این شیرینی به چه موادی نیاز دارم؟</string>
    <string name="making">مراحل تهیه این شیرینی به چه شکله؟</string>
    <string name="text_about_me"> در سوئیت لند
    \n
  دستور تهیه بهترین شیرینی ها و کیک هایی که شما به آسانی می توانید در منزل تهیه کنید، می یابید
    \n
        دستوراتی مانند:
    \n
 </string>
    <string name="about_me_continue">
        کیک شش تخم مرغی
    \n
   بستنی موزی
    \n
   کیک برنجی
    \n
   بستنی هلو
    \n
  شیرینی چرخی
    \n
        و …
    \n
    </string>
    <string name="source">مرجع این اپلیکشن: سایت irancook.ir</string>
    <string name="fav_sweets_text">شیرینی های مورد علاقه</string>
    <string name="add_to_fave">به لیست علاقه مندی ها اضافه شد</string>
    <string name="remove_to_fave">از لیست علاقه مندی ها حذف شد</string>
    <string name="sweet_image">sweet_image</string>
    <string name="icon">icon</string>
    <string name="timer">timer</string>
    <string name="me_menu">درباره ی ما</string>
    <string name="fav_menu">مورد علاقه</string>
    <string name="home_menu">خانه</string>
    <string name="back">back</string>

    <string name="splash_text">
        برای یک
        \n
        تجربه ی شیرین
        \n
        آماده ای؟
    </string>
    <string name="splash_button_text">ورود</string>
    <string name="article_title">مقاله ها</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_readmore">برای مطالعه بیشتر</string>
</resources>