<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.AboutMeFragment">
    <TextView
        android:id="@+id/aboutme_fragment_tv_showtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:fontFamily="@font/vazir"
        android:textSize="30sp"
        android:textColor="@color/secondary_writing_color"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/aboutme_bg"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/aboutme_fragment_tv_abouttxt"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/text_about_me"
            android:textColor="@color/secondary_writing_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/aboutme_fragment_tv_abouttxtcontinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginRight="24dp"
            android:gravity="right"
            android:text="@string/about_me_continue"
            android:textColor="@color/colorAccent_font"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/aboutme_fragment_tv_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_marginTop="24dp"
            android:textColor="@color/secondary_writing_color"
            android:text="@string/source"
            android:layout_marginRight="24dp"/>

    </LinearLayout>

</LinearLayout>